# TheWatcher

./: .bazelignore  .bazelrc  .clang-format  .clangd  .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bazel  build.cmd  meson-build-bsd.sh  meson-build-linux.sh  meson-build.cmd  meson.build
.github/workflows/: ci.yml
agent/: BUILD.bazel  agent.cpp  agent.hpp  config.cpp  config.hpp  enrollment.cpp  enrollment.hpp  enrollment_client.cpp  main.cpp  meson.build
agent/collectors/: BUILD.bazel  collector.hpp  cpu_collector.cpp  cpu_collector.hpp  disk_collector.cpp  disk_collector.hpp  log_collector.cpp  log_collector.hpp  memory_collector.cpp  memory_collector.hpp  meson.build  network_collector.cpp  network_collector.hpp  process_collector.cpp  process_collector.hpp  temperature_collector.cpp  temperature_collector.hpp
agent_tests/: BUILD.bazel  collector_contract_test.cpp  config_test.cpp  disk_collector_test.cpp  enrollment_test.cpp  log_collector_test.cpp  meson.build
common/: BUILD.bazel  SingleLog.hpp  collector_config.hpp  commands.hpp  crypto.hpp  meson.build  metrics.hpp  protocol.hpp  windows_service.cpp  windows_service.hpp
common_tests/: BUILD  BUILD.bazel  crypto_test.cpp  meson.build  protocol_test.cpp  singlelog_test.cpp
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/public/: server_page_sample.html
dashboard/src/: agentActions.d.ts  agentActions.js  agentActions.test.js  agentActions.test.ts  agentActions.ts  api.d.ts  api.js  api.test.js  api.test.ts  api.ts  main.js  main.tsx  models.d.ts  models.ts  status.d.ts  status.js  status.test.js  status.test.ts  status.ts  styles.css  uiLogic.d.ts  uiLogic.js  uiLogic.test.js  uiLogic.test.ts  uiLogic.ts
dashboard_tests/: BUILD.bazel
docs/: 01-progress-tracker.md  architecture.md  build-environment.md  collector-contract.md  configuration.md  dashboard.md  development.md  ha-topology.md  installation.md  logging.md  running.md  service-installation.md  threat-model.md
integration_tests/: BUILD.bazel  meson.build  server_agent_integration_test.cpp
packaging/windows/: TheWatcher.iss
patches/: BUILD.bazel  cpp_httplib_bazel9_cc_library.patch  libzmq_bazel_windows_sodium_find.patch  rules_foreign_cc_bazel9_cc_import.patch
plans/: T1.plan.json  T10.plan.json  T11.plan.json  T12.plan.json  T13.plan.json  T14.plan.json  T15.plan.json  T16.plan.json  T17.plan.json  T18.plan.json  T2.plan.json  T3.plan.json  T4.plan.json  T5.plan.json  T6.plan.json  T7.plan.json  T8.plan.json  T9.plan.json
scripts/: bazel.cmd  copy_headers.py  setup-build-env-bsd.sh  setup-build-env-linux.sh  setup-build-env.cmd  setup-build-env.ps1
server/: BUILD.bazel  api.cpp  api.hpp  api_json.hpp  config.cpp  config.hpp  main.cpp  meson.build  report_generator.cpp  report_generator.hpp  server.cpp  server.hpp  startup_signal.hpp  status_engine.cpp  status_engine.hpp  store.hpp  store_postgres.cpp  store_postgres.hpp  store_sqlite.cpp  store_sqlite.hpp  webhook_security.cpp  webhook_security.hpp  zap_handler.cpp  zap_handler.hpp
server_tests/: BUILD.bazel  config_test.cpp  meson.build  server_lifecycle_test.cpp  status_engine_test.cpp  store_postgres_test.cpp  store_test.cpp  webhook_security_test.cpp  zap_handler_test.cpp
subprojects/: cpp-httplib.wrap  libcbor.wrap  libsodium.wrap  libzmq.wrap
subprojects/packagefiles/libcbor/: meson.build
subprojects/packagefiles/libcbor/cbor/: cbor_export.h
subprojects/packagefiles/libsodium/: list_sources.py  meson.build
subprojects/packagefiles/libsodium/src/libsodium/include/sodium/: version.h
subprojects/packagefiles/libzmq/builds/cmake/Modules/: Findsodium.cmake
