load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common_core",
    hdrs = [
        "SingleLog.hpp",
        "collector_config.hpp",
        "metrics.hpp",
        "protocol.hpp",
    ],
    strip_include_prefix = ".",
    deps = [
        "@libcbor//:cbor",
        "@nlohmann_json//:json",  # keep if collector_config.hpp still exposes JSON macros
    ],
)

cc_library(
    name = "common",
    srcs = select({
        "@platforms//os:windows": ["windows_service.cpp"],
        "//conditions:default": [],
    }),
    hdrs = [
        "SingleLog.hpp",
        "collector_config.hpp",
        "commands.hpp",
        "crypto.hpp",
        "metrics.hpp",
        "protocol.hpp",
        "windows_service.hpp",
    ],
    linkopts = select({
        "@platforms//os:windows": ["advapi32.lib"],
        "//conditions:default": [],
    }),
    strip_include_prefix = ".",
    deps = [
        ":common_core",
        "@libsodium//:libsodium",
        "@libcbor//:cbor",
    ],
)
