load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "protocol_test",
    srcs = ["protocol_test.cpp"],
    deps = [
        "//common",
        "@catch2//:catch2_main",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)
