load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "crypto_test",
    srcs = ["crypto_test.cpp"],
    deps = [
        "//common",
        "@catch2//:catch2_main",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "protocol_test",
    srcs = ["protocol_test.cpp"],
    deps = [
        "//common",
        "@catch2//:catch2_main",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "singlelog_test",
    srcs = ["singlelog_test.cpp"],
    deps = [
        "//common:common_core",
        "@catch2//:catch2_main",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)
