# BUILD file for dashboard tests

# This directory is for Node.js/JavaScript tests (e.g., Jest/Mocha).
# Bazel might not be the primary tool here, but we create a placeholder.

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "dashboard_test",
    srcs = [],  # Placeholder for JS test setup files
    hdrs = [],
)
