load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "server_agent_integration_test",
    srcs = ["server_agent_integration_test.cpp"],
    timeout = "moderate",
    deps = [
        "//agent:agent_lib",
        "//common",
        "//server:server_lib",
        "@catch2//:catch2_main",
        "@cpp_httplib//:httplib",
        "@cppzmq//:cppzmq",
        "@libsodium//:libsodium",
        "@nlohmann_json//:json",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default": ["-lpthread"],
    }),
)
