load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:private"])

cc_library(
    name = "server_config",
    srcs = ["config.cpp"],
    hdrs = ["config.hpp"],
    linkopts = select({
        "@platforms//os:windows": ["shell32.lib"],
        "//conditions:default": [],
    }),
    deps = [
        "//common",
        "@libsodium//:libsodium",
        "@libcbor//:cbor",
    ],
    visibility = [
        "//integration_tests:__pkg__",
        "//server_tests:__pkg__",
    ],
)

cc_library(
    name = "server_store",
    srcs = [
        "status_engine.cpp",
        "store_sqlite.cpp",
    ],
    hdrs = [
        "status_engine.hpp",
        "store.hpp",
        "store_sqlite.hpp",
    ],
    deps = [
        "//common:common_core",
        "@cpp_httplib//:httplib",
        "@libsodium//:libsodium",
        "@libcbor//:cbor",
        "@sqlite3//:sqlite3",
    ],
    visibility = [
        "//integration_tests:__pkg__",
        "//server_tests:__pkg__",
    ],
)

# Library containing server logic except main() and standalone config loading.
# Tests depend on this.
cc_library(
    name = "server_lib",
    srcs = [
        "api.cpp",
        "server.cpp",
        "zap_handler.cpp",
    ],
    hdrs = [
        "api.hpp",
        "api_json.hpp",
        "server.hpp",
        "startup_signal.hpp",
        "zap_handler.hpp",
    ],
    linkopts = select({
        "@platforms//os:windows": ["shell32.lib"],
        "//conditions:default": [],
    }),
    deps = [
        ":server_config",
        ":server_store",
        "//common",
        "@cppzmq//:cppzmq",
        "@cpp_httplib//:httplib",
        "@libsodium//:libsodium",
        "@libcbor//:cbor",
        "@sqlite3//:sqlite3",
    ],
    visibility = [
        "//integration_tests:__pkg__",
        "//server_tests:__pkg__",
    ],
)

cc_binary(
    name = "TheWatcherServer",
    srcs = ["main.cpp"],
    linkopts = select({
        "@platforms//os:windows": ["ws2_32.lib", "iphlpapi.lib"],
        "//conditions:default":   ["-lpthread"],
    }),
    deps = [
        ":server_config",
        ":server_lib",
    ],
    visibility = ["//visibility:public"],
)
