load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:private"])

cc_test(
    name = "config_test",
    srcs = ["config_test.cpp"],
    deps = [
        "//common",
        "//server:server_config",
        "@catch2//:catch2_main",
        "@libcbor//:cbor",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "store_test",
    srcs = ["store_test.cpp"],
    deps = [
        "//server:server_store",
        "@catch2//:catch2_main",
        "@sqlite3//:sqlite3",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "status_engine_test",
    srcs = ["status_engine_test.cpp"],
    deps = [
        "//server:server_store",
        "@catch2//:catch2_main",
        "@libcbor//:cbor",
        "@sqlite3//:sqlite3",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "zap_handler_test",
    srcs = ["zap_handler_test.cpp"],
    deps = [
        "//common",
        "//server:server_lib",
        "@catch2//:catch2_main",
        "@cppzmq//:cppzmq",
        "@libsodium//:libsodium",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)

cc_test(
    name = "server_lifecycle_test",
    srcs = ["server_lifecycle_test.cpp"],
    deps = [
        "//common",
        "//server:server_lib",
        "@catch2//:catch2_main",
        "@cppzmq//:cppzmq",
        "@sqlite3//:sqlite3",
    ],
    linkopts = select({
        "@platforms//os:windows": [],
        "//conditions:default":   ["-lpthread"],
    }),
)
